# int20h_offline

./: .dockerignore  .gitignore  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: fly.yaml
backend/: __main__.py  app.py  config.py  exc.py  models.py  types.py  utils.py  wsgi.py
backend/handlers/: activity.py  attendance.py  auth.py  group.py  health.py  journal.py  newsletter.py  student.py  swagger.py  user.py
backend/lib/: activity.py  apispec.py  auth.py  group.py  journal.py  newsletter.py  student.py
backend/lib/schemas/: __init__.py  docs.py  validation.py
backend/services/: db.py  mail_service.py
backend/tests/: conftest.py  test_auth.py
config/app/: dev.yaml  prd.yaml  test.yaml
docker/: Dockerfile  Dockerfile.frontend
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AuthContext.ts  Router.tsx
frontend/src/components/: index.ts
frontend/src/components/ActivitiesList/: ActivitiesList.module.css  ActivitiesList.tsx
frontend/src/components/AttendanceList/: AttendanceItem.module.css  AttendanceItem.tsx  AttendanceList.module.css  AttendanceList.tsx
frontend/src/components/Buttons/: Button.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/: index.ts
frontend/src/pages/: index.ts
frontend/src/types/: Activity.ts  ActivityDto.types.ts  Attendance.ts  Student.types.ts  Subject.types.ts  User.types.ts  index.ts
migrations/versions/: 2f6aa38f9289_other_tables.py  5654816a8003_init.py  66a2cf97456b_unique_group_name.py  6774f76e97ff_student_group_relation.py  c13931d3cd14_user_table.py  c2425387ccdb_fixed_vers.py
(+36 files in other folders)
