[project]
name = "int20h_2024"
version = "0.1.0"
description = "INT20H test task"
authors = [
    {name = "frolkin28", email = "frolkin2801@gmail.com"},
    {name = "1vanBilous", email = ""},
    {name = "nastyafomenko", email = ""},
    {name = "OleksandrBilous", email = ""},
]
dependencies = [
    "flask>=3.0.2",
    "Flask-SQLAlchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "Flask-Migrate>=4.0.5",
    "pyyaml>=6.0.1",
    "marshmallow>=3.20.2",
    "apispec>=6.4.0",
    "Flask-JWT-Extended>=4.6.0",
    "apispec-webframeworks>=1.0.0",
    "flask-swagger-ui>=4.11.1",
    "boto3>=1.34.36",
    "flask-socketio>=5.3.6",
    "gunicorn>=21.2.0",
    "eventlet>=0.35.1",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
]
